# wavesim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fftw_test.c  loc  quirkcheck  stats
1d-case/: Main.py  Simulation.py  Updateable.py  Window.py  requirements.txt
experiments/2d-wavesim/: Simulation.py  Updateable.py  Window.py  single-step-2d.py
fftw-3.3.7/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/forms/: MainWindow.ui
frontend/include/frontend/: MainWindow.hpp
frontend/include/frontend/models/: Camera.hpp  Scene.hpp  SceneLoader.hpp
frontend/include/frontend/views/: MainWindow.hpp  SceneView.hpp
frontend/shaders/: cubes.fs  cubes.vs
frontend/src/: MainWindow.cpp  main.cpp
frontend/src/models/: Camera.cpp  Scene.cpp  SceneLoader.cpp
frontend/src/views/: MainWindow.cpp  SceneView.cpp
googletest/: CMakeLists.txt
googletest/googlemock/: CMakeLists.txt
googletest/googletest/: CMakeLists.txt
googletest/googletest/cmake/: internal_utils.cmake
gource/: capture.sh  ignore_files
python_tests/: Main.py  Simulation.py  Window.py  requirements.txt
scripts/: valgrind-tests-linux.sh
wavesim/: CMakeLists.txt  build_number.txt  generate_python_unit_tests.cmake  generate_timestamp.cmake
wavesim/cmake/: FindFFTW.cmake  build_number.txt  generate_python_unit_tests.cmake  generate_timestamp.cmake
wavesim/cmake/modules/: build_number.txt  generate_python_unit_tests.cmake  generate_timestamp.cmake
wavesim/cmake/templates/: config.h.in
wavesim/common/include/wavesim/: btree.h  hash.h  hashmap.h  log.h  memory.h  pstdint.h  return_codes.h  stdint.h  vector.h  wavesim.h
wavesim/common/src/: aabb.c  btree.c  hash.c  hashmap.c  log.c  memory.c  return_codes.c  vector.c  wavesim.c
wavesim/common/src/platform/linux/: backtrace_linux.c
wavesim/include/intern/wavesim/: aabb.h  attribute.h  audio_listener.h  audio_source.h  backtrace.h  bst_vector.h  btree.h  build_info.h  config.h.in  export.h.in  face.h  hash.h  hash_set.h  hashmap.h  intersections.h  medium.h  memory.h  mesh.h  mesh_builder.h  octree.h  partition.h  sim_ray.h  simulation_ard.h  string.h  vec3.h  vector.h  vertex.h
wavesim/include/python/wavesim/: wavesim_module_Mesh.h
wavesim/mesh/include/wavesim/mesh/: face.h  mesh.h  mesh_builder.h  obj.h  octree.h  vertex.h
wavesim/mesh/src/: attribute.c  face.c  intersections.c  mesh.c  mesh_builder.c  obj_export_common.c  obj_export_medium.c  obj_export_octree.c  obj_import.c  octree.c  vertex.c
wavesim/python/include/wavesim/: wavesim_module_Attribute.h  wavesim_module_Face.h  wavesim_module_MeshIterator.h  wavesim_module_Vertex.h
wavesim/python/include/wavesim/python/: wavesim_module_Attribute.h  wavesim_module_Face.h  wavesim_module_Vertex.h
wavesim/python/src/: wavesim_module.c  wavesim_module_Attribute.c  wavesim_module_Face.c  wavesim_module_Mesh.c  wavesim_module_MeshIterator.c  wavesim_module_Vertex.c
wavesim/python/tests/: Attribute.py  Face.py  Mesh.py  Vertex.py  build_info.py  test_python_bindings.cpp.in
wavesim/simulation/include/wavesim/simulation/: audio_source.h  medium.h  simulation.h
wavesim/simulation/src/: audio_listener.c  audio_source.c  medium.c  simulation.c  simulation_ard.c  simulation_ray.c
wavesim/src/: aabb.c  attribute.c  audio_listener.c  audio_source.c  bst_vector.c  btree.c  build_info.c.in  face.c  hash.c  hash_set.c  hash_set_contiguous_key_store.c  hash_set_generic_key_store.c  hash_set_ref_key_store.c  hashmap.c  intersections.c  log.c  medium.c  memory.c  mesh.c  mesh_builder.c  obj_export.c  obj_export_common.c  obj_export_medium.c  obj_export_octree.c  obj_import.c  octree.c  partition.c  return_codes.c  sim.c  sim_ray.c  simulation.c  simulation_ard.c  string.c  vec3.c  vector.c  vertex.c  wavesim.c
wavesim/src/platform/win32/: backtrace.c
wavesim/src/python/: wavesim_module_Attribute.c  wavesim_module_Mesh.c  wavesim_module_Vertex.c
wavesim/tests/: api.cpp  api_stub.c  app.c  environment_util_global.cpp  test_aabb.cpp  test_api.cpp  test_attribute.cpp  test_bst_vector.cpp  test_btree.cpp  test_face.cpp  test_hash_set.cpp  test_hash_set_contiguous.cpp  test_hash_set_generic.cpp  test_hash_set_ref_keys.cpp  test_hashmap.cpp  test_intersections.cpp  test_medium.cpp  test_mesh.cpp  test_mesh_builder.cpp  test_obj_import.cpp  test_octree.cpp  test_partition.cpp  test_python_bindings.cpp  test_simulation.cpp  test_string.cpp  test_vec3.cpp  test_vector.cpp  test_vertex.cpp  utils.cpp  utils.hpp
wavesim/tests/include/: utils.hpp
wavesim/tests/python/: test_python_bindings.cpp.in
wavesim/tests/run/: wavesim_tests_api.cpp  wavesim_tests_api_stub.c
wavesim/tests/src/: test_attribute.cpp  test_btree.cpp  test_face.cpp  test_hashmap.cpp  test_intersections.cpp  test_medium.cpp  test_mesh.cpp  test_mesh_builder.cpp  test_obj_import.cpp  test_octree.cpp  test_simulation.cpp  test_vertex.cpp  utils.cpp
